--- a/AxioPratice/AxioPratice.vcxproj.filters
+++ b/AxioPratice/AxioPratice.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="AxioPratice.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Printer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Printer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
